# ai-text-provenance-service

./: .gitignore  DEVELOPMENT.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docker/: Dockerfile  Dockerfile.gpu  docker-compose.yml
models/: .gitkeep
scripts/: export_onnx.py  train.py
src/ai_text_provenance/: __init__.py
src/ai_text_provenance/api/: __init__.py  app.py  server.py
src/ai_text_provenance/cli/: main.py
src/ai_text_provenance/features/: __init__.py  extractor.py  linguistic.py  rst_parser.py  statistical.py
src/ai_text_provenance/inference/: __init__.py  batch.py  engine.py
src/ai_text_provenance/models/: __init__.py  classifier.py  schemas.py
src/ai_text_provenance/training/: __init__.py  dataset.py  trainer.py
tests/: __init__.py  test_api.py  test_classifier.py  test_features.py  test_rst_parser.py
