[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-text-provenance"
version = "0.1.0"
description = "4-way AI text classification API — human, AI, polished, humanized"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Phoenix Assistant", email = "phoenix@phoenixai.dev" }
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
keywords = ["ai-detection", "nlp", "rst", "text-classification", "provenance"]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "spacy>=3.7.0",
    "torch>=2.1.0",
    "transformers>=4.36.0",
    "onnxruntime>=1.16.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "nltk>=3.8.0",
    "httpx>=0.26.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "httpx>=0.26.0",
]
gpu = [
    "onnxruntime-gpu>=1.16.0",
]
training = [
    "datasets>=2.16.0",
    "accelerate>=0.25.0",
    "wandb>=0.16.0",
    "optuna>=3.5.0",
]

[project.scripts]
provenance = "ai_text_provenance.cli.main:app"
provenance-server = "ai_text_provenance.api.server:run"

[project.urls]
Homepage = "https://github.com/phoenix-assistant/ai-text-provenance-service"
Documentation = "https://github.com/phoenix-assistant/ai-text-provenance-service#readme"
Repository = "https://github.com/phoenix-assistant/ai-text-provenance-service"
Issues = "https://github.com/phoenix-assistant/ai-text-provenance-service/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_text_provenance"]

[tool.ruff]
target-version = "py310"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise without from inside except
]

[tool.ruff.isort]
known-first-party = ["ai_text_provenance"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
